--- a/ASMES6.HTML
+++ b/ASMES6.HTML
@@ -63,7 +63,7 @@
                                 <img src="images/Images 2.png" alt="">
                                 <b style="font-size: x-large;">Syltherine</b>
                                 <p style="font-size: larger;">Stylish cafe chair</p>
-                                <div class="col_2_main_price_1" style="font-size: large;">3.500.000đ</div>
+                                <div class="col_2_main_price_1 " style="font-size: large;">3.500.000đ</div>
                                 <button class="add-to-cart" >Add To Cart</button>
                             </div>
                             
@@ -252,7 +252,7 @@
                 <div class="form_title links_title">Newsletter</div>
                 <form action="" >
                    <input type="email" name="" id="" placeholder="Enter Your Email Address">
-                   <input type="submit" value="Submit">
+                   <input type="submit" value="SUBSCRIBE">
                 </form>
             </div>
         </div>
