--- a/ASMES6index.html
+++ b/ASMES6index.html
@@ -33,6 +33,7 @@
                     <img src="images/arrow_2.png" alt="">
                     <li>Shop</li>
                     <img src="images/arrow_2.png" alt="">
+                    <img src="images/Line 5.png" alt="">
                     <li>Asgaard sofa</li>
                     
                   </ul>
